updated .vscode config

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,11 +1,18 @@
 {
-  "[python]": {
-    "editor.defaultFormatter": "ms-python.black-formatter",
-    "editor.formatOnSave": true,
-    "editor.codeActionsOnSave": {
-      "source.organizeImports": "explicit"
-    }
+  "editor.formatOnSave": true,
+  "isort.args": ["--profile=black"],
+  "editor.codeActionsOnSave": {
+    "source.organizeImports": "explicit"
   },
-  "isort.args": ["--profile", "black"],
-  "pylint.args": ["--extension-pkg-whitelist=PyQt5"]
+  "editor.defaultFormatter": "ms-python.black-formatter",
+  "pylint.args": ["--disable=C,R", "--extension-pkg-whitelist=PyQt5"],
+  "pylint.severity": {
+    "convention": "Information",
+    "error": "Error",
+    "fatal": "Error",
+    "refactor": "Hint",
+    "warning": "Warning",
+    "info": "Information"
+  },
+  "autoDocstring.docstringFormat": "sphinx"
 }
