--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,7 +5,10 @@
     "source.organizeImports": "explicit"
   },
   "editor.defaultFormatter": "ms-python.black-formatter",
-  "pylint.args": ["--disable=C,R", "--extension-pkg-whitelist=PyQt5"],
+  "pylint.args": [
+    "--disable=C,R, bare-except",
+    "--extension-pkg-whitelist=PyQt5"
+  ],
   "pylint.severity": {
     "convention": "Information",
     "error": "Error",
