--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,11 @@
 ifaddr==0.2.0
+qtmodern==0.2.0
+QtPy==2.4.1
+packaging==24.1
 psutil==5.9.6
 PyQt5==5.15.10
 PyQt5-Qt5==5.15.2
+pyqt5-fugueicons==3.5.6.2
 PyQt5-sip==12.13.0
 pyserial==3.5
 PyVISA==1.14.1
